fix line spacing

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ h1 {
 
 p {
   margin: 0;
+  line-height: 1.4;
 }
 
 footer {
